--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
       <h1>TorrentWeb</h1><img src="https://cdn.discordapp.com/emojis/703673493191000144.png?v=1" height="10%" width="10%">
   
       <form action="/lol" method="POST" class="form">
-        <input required placeholder="Torrent URL" name="torrent" id="torrent"><br>
+        <input name="torrent" type="text" id="torrent" placeholder="Magnet link" required><br>
         <button id="sumbuto" class="btn btn-success" type="submit">Submit</button>
       </form>
+
+      
     
      </center>
   </body>
